--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
 
         <header class="header">
 
-            <div class="logo-container"></div>
+            <div class="logo-container">
+                <img id="logoimg"
+                    src="images/png-transparent-task-project-management-computer-icons-service-others-miscellaneous-text-logo.png">
+            </div>
 
-            <div class="menu-container"></div>
+            <div class="menu-container">
+                <div class="navbar">
+                    <p class="url">
+                        <a href="url">link text</a>
+                        <a href="url">link text</a>
+                    </p>
+                </div>
+                <img id="logouser" src="images/user-icon-2048x2048-ihoxz4vq.png">
+            </div>
 
         </header>
 
         <section class="main-section">
 
-           
+
 
         </section>
 
