--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="menu-container">
                 <div class="navbar">
                     <p class="url">
-                        <a href="url">link text</a>
-                        <a href="url">link text</a>
+                        <a href="url">All Task</a>
+                        <a href="url">Contact Us</a>
                     </p>
                 </div>
                 <img id="logouser" src="images/user-icon-2048x2048-ihoxz4vq.png">
@@ -33,11 +33,36 @@
 
         <section class="main-section">
 
+            <div class="content">
+                <h2>All Task</h2>
 
+                <table>
+                    <tr>
+                        <th>Task Id</th>
+                        <th>Task Name</th>
+                        <th>Update Task</th>
+                        <th>Remove Task</th>
+                    </tr>
+                    <tr>
+                        <td>Alfreds Futterkiste</td>
+                        <td>Maria Anders</td>
+                        <td>Germany</td>
+                        <td>Germany</td>
+                      </tr>
+                      <tr>
+                        <td>Centro comercial Moctezuma</td>
+                        <td>Francisco Chang</td>
+                        <td>Mexico</td>
+                        <td>Germany</td>
+                      </tr>
+                    
+            </div>
 
         </section>
 
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <p>Company Name © 2024</p>
+        </footer>
 
     </main>
     <script src="index.js"></script>
