--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Task Manegments</title>
     <link rel="stylesheet" href="index.css">
     <script src='https://code.jquery.com/jquery-2.2.4.js'></script>
+ 
 </head>
 
 <body>
@@ -35,7 +36,9 @@
 
             <div class="content">
                 <h2>All Task</h2>
-
+                <button class="button">Create New</button>
+                <a href="default.asp" target="_blank">Create New</a>
+                <p></p>
                 <table>
                     <tr>
                         <th>Task Id</th>
@@ -46,14 +49,14 @@
                     <tr>
                         <td>Alfreds Futterkiste</td>
                         <td>Maria Anders</td>
-                        <td>Germany</td>
-                        <td>Germany</td>
+                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
+                        <td><img class="icondelete" src="images/delete.png"></td>
                       </tr>
                       <tr>
                         <td>Centro comercial Moctezuma</td>
                         <td>Francisco Chang</td>
-                        <td>Mexico</td>
-                        <td>Germany</td>
+                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
+                        <td><img class="icondelete" src="images/delete.png"></td>
                       </tr>
                     
             </div>
@@ -61,7 +64,7 @@
         </section>
 
         <footer class="footer">
-            <p>Company Name © 2024</p>
+           
         </footer>
 
     </main>
@@ -69,3 +72,7 @@
 </body>
 
 </html>
+
+<!--
+     <p>Company Name © 2024</p>
+-->
