--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="menu-container">
                 <div class="navbar">
                     <p class="url">
-                        <a href="url">All Task</a>
-                        <a href="url">Contact Us</a>
+                        <a href="index.html">All Task</a>
+                        <a href="contact.html">Contact Us</a>
                     </p>
                 </div>
                 <img id="logouser" src="images/user-icon-2048x2048-ihoxz4vq.png">
@@ -37,7 +37,7 @@
             <div class="content">
                 <h2>All Task</h2>
                 <button class="button">Create New</button>
-                <a href="default.asp" target="_blank">Create New</a>
+                <a href="add.html" target="_blank">Create New</a>
                 <p></p>
                 <table>
                     <tr>
