--- a/index.html
+++ b/index.html
@@ -36,25 +36,54 @@
 
             <div class="content">
                 <h2>All Task</h2>
-                <button class="button">Create New</button>
                 <a href="add.html" target="_blank">Create New</a>
                 <p></p>
                 <table>
                     <tr>
                         <th>Task Id</th>
                         <th>Task Name</th>
+                        <th>Task Deadline</th>
+                        <th>Task Assessment</th>
                         <th>Update Task</th>
                         <th>Remove Task</th>
                     </tr>
                     <tr>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
+                        <td id="id"></td>
+                        <td id="des"></td>
+                        <td id="datedeadline"></td>
+                        <td id="evaluation"></td>
                         <td><img  class = "iconupdate" src="images/5278658.png"></td>
                         <td><img class="icondelete" src="images/delete.png"></td>
                       </tr>
                       <tr>
-                        <td>Centro comercial Moctezuma</td>
-                        <td>Francisco Chang</td>
+                        <td id="id2"></td>
+                        <td id="des2"></td>
+                        <td id="datedeadline2"></td>
+                        <td id="evaluation2"></td>
+                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
+                        <td><img class="icondelete" src="images/delete.png"></td>
+                      </tr>
+                      <tr>
+                        <td id="id3"></td>
+                        <td id="des3"></td>
+                        <td id="datedeadline3"></td>
+                        <td id="evaluation3"></td>
+                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
+                        <td><img class="icondelete" src="images/delete.png"></td>
+                      </tr>
+                      <tr>
+                        <td id="id4"></td>
+                        <td id="des4"></td>
+                        <td id="datedeadline4"></td>
+                        <td id="evaluation4"></td>
+                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
+                        <td><img class="icondelete" src="images/delete.png"></td>
+                      </tr>
+                      <tr>
+                        <td id="id5" ></td>
+                        <td id="des5"></td>
+                        <td id="datedeadline5"></td>
+                        <td id="evaluation5"></td>
                         <td><img  class = "iconupdate" src="images/5278658.png"></td>
                         <td><img class="icondelete" src="images/delete.png"></td>
                       </tr>
