--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="menu-container">
                 <div class="navbar">
                     <p class="url">
-                        <a href="index.html">All Task</a>
+                        <a href="about.html">About Us</a>
                         <a href="contact.html">Contact Us</a>
                     </p>
                 </div>
@@ -84,6 +84,22 @@
                         <td id="des5"></td>
                         <td id="datedeadline5"></td>
                         <td id="evaluation5"></td>
+                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
+                        <td><img class="icondelete" src="images/delete.png"></td>
+                      </tr>
+                      <tr>
+                        <td id="id6" ></td>
+                        <td id="des6"></td>
+                        <td id="datedeadline6"></td>
+                        <td id="evaluation6"></td>
+                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
+                        <td><img class="icondelete" src="images/delete.png"></td>
+                      </tr>
+                      <tr>
+                        <td id="id7" ></td>
+                        <td id="des7"></td>
+                        <td id="datedeadline7"></td>
+                        <td id="evaluation7"></td>
                         <td><img  class = "iconupdate" src="images/5278658.png"></td>
                         <td><img class="icondelete" src="images/delete.png"></td>
                       </tr>
