--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <script src='https://code.jquery.com/jquery-2.2.4.js'></script>
 </head>
+
 <body>
     <main class="main-wrapper">
 
@@ -33,21 +35,23 @@
 
             <div class="content">
                 <h1>Contact Us</h1>
-                <ul>
-                    <li>Phone: +216 71 85 85 85</li>
-                    <li>Mobile: +216 99 90 90 90</li>
-                    <li>Email : hello@rbk.tn</li>
-                    <li>Address: RBK, Bloc B24, Elgazala Technopark, Raoued, Gouvernorat de l’Ariana, 2088 Ariana – Tunisie.</li>
-                </ul>
-                    
+                <img src="images/téléchargement.jpg">
+                <h3 class="h3">Phone: +216 71 85 85 85</h3>
+                <h3 class="h3">Mobile: +216 99 90 90 90</h3>
+                <h3 class="h3">Email : hello@rbk.tn</h3>
+                <h3 class="h3">Address: RBK, Bloc B24, Elgazala Technopark, Raoued, Gouvernorat de l’Ariana, 2088 Ariana
+                    – Tunisie.</h3>
+
+
             </div>
 
         </section>
 
         <footer class="footer">
-           
+
         </footer>
 
     </main>
 </body>
+
 </html>
