--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Task Manegments</title>
     <link rel="stylesheet" href="index.css">
     <script src='https://code.jquery.com/jquery-2.2.4.js'></script>
+    <head>
+        <script src="https://kit.fontawesome.com/45e38e596f.js" crossorigin="anonymous"></script>
+     </head>
  
 </head>
 
@@ -52,56 +55,56 @@
                         <td id="des"></td>
                         <td id="datedeadline"></td>
                         <td id="evaluation"></td>
-                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
-                        <td><img class="icondelete" src="images/delete.png"></td>
+                        <td><i class="fas fas fa-edit"></i></td>
+                        <td><i class="fas fa-trash"></i></td>
                       </tr>
                       <tr>
                         <td id="id2"></td>
                         <td id="des2"></td>
                         <td id="datedeadline2"></td>
                         <td id="evaluation2"></td>
-                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
-                        <td><img class="icondelete" src="images/delete.png"></td>
+                        <td><i class="fas fas fa-edit"></i></td>
+                        <td><i class="fas fa-trash"></i></td>
                       </tr>
                       <tr>
                         <td id="id3"></td>
                         <td id="des3"></td>
                         <td id="datedeadline3"></td>
                         <td id="evaluation3"></td>
-                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
-                        <td><img class="icondelete" src="images/delete.png"></td>
+                        <td><i class="fas fas fa-edit"></i></td>
+                        <td><i class="fas fa-trash"></i></td>
                       </tr>
                       <tr>
                         <td id="id4"></td>
                         <td id="des4"></td>
                         <td id="datedeadline4"></td>
                         <td id="evaluation4"></td>
-                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
-                        <td><img class="icondelete" src="images/delete.png"></td>
+                        <td><i class="fas fas fa-edit"></i></td>
+                        <td><i class="fas fa-trash"></i></td>
                       </tr>
                       <tr>
                         <td id="id5" ></td>
                         <td id="des5"></td>
                         <td id="datedeadline5"></td>
                         <td id="evaluation5"></td>
-                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
-                        <td><img class="icondelete" src="images/delete.png"></td>
+                        <td><i class="fas fas fa-edit"></i></td>
+                        <td><i class="fas fa-trash"></i></td>
                       </tr>
                       <tr>
                         <td id="id6" ></td>
                         <td id="des6"></td>
                         <td id="datedeadline6"></td>
                         <td id="evaluation6"></td>
-                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
-                        <td><img class="icondelete" src="images/delete.png"></td>
+                        <td><i class="fas fas fa-edit"></i></td>
+                        <td><i class="fas fa-trash"></i></td>
                       </tr>
                       <tr>
                         <td id="id7" ></td>
                         <td id="des7"></td>
                         <td id="datedeadline7"></td>
                         <td id="evaluation7"></td>
-                        <td><img  class = "iconupdate" src="images/5278658.png"></td>
-                        <td><img class="icondelete" src="images/delete.png"></td>
+                        <td><i class="fas fas fa-edit"></i></td>
+                        <td><i class="fas fa-trash"></i></td>
                       </tr>
                     
             </div>
