--- a/add.html
+++ b/add.html
@@ -7,6 +7,9 @@
     <title>AddTask</title>
     <link rel="stylesheet" href="index.css">
     <script src='https://code.jquery.com/jquery-2.2.4.js'></script>
+    <head>
+        <script src="https://kit.fontawesome.com/45e38e596f.js" crossorigin="anonymous"></script>
+     </head>
 </head>
 
 <body>
